--- a/public/webflow.css
+++ b/public/webflow.css
@@ -1089,7 +1089,7 @@ textarea.w-select {
   color: #222222;
 }
 .w-dropdown-link.w--current {
-  color: #0082f3;
+  color: black;
 }
 .w-nav[data-collapse="all"] .w-dropdown,
 .w-nav[data-collapse="all"] .w-dropdown-toggle {
@@ -1606,7 +1606,7 @@ textarea.w-select {
   margin-right: auto;
 }
 .w-nav-link.w--current {
-  color: #0082f3;
+  color: white;
 }
 .w-nav-menu {
   position: relative;
