--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,106 +1,6 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 03 2018 09:00:47 GMT+0000 (UTC)  -->
-<html data-wf-page="5b80023d8e9ed84b05955839" data-wf-site="5b80023c8e9ed83e51955834">
-<head>
-  <meta charset="utf-8">
-  <title>All Layouts</title>
-  <meta content="All Layouts" property="og:title">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Webflow" name="generator">
-  <link href="../normalize.css" rel="stylesheet" type="text/css">
-  <link href="../webflow.css" rel="stylesheet" type="text/css">
-  <link href="../spjain.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,500"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
-</head>
-<body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav"><a href="index.html" class="brand-link left-spacing w-nav-brand"></a>
-    <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/users/sign_in" class="navigation-link w-nav-link">Login</a><a href="/users/sign_up" class="navigation-link w-nav-link">Signup</a><img src="../fb-round.png" width="30" height="30" data-w-id="85d85e93-7a46-20c9-6b29-0cc697d97270" class="image-2"><img src="../linkedin-round.png" width="30" height="30" data-w-id="3dedb997-a393-6efe-3ae9-17f3151a35f7" class="image"></nav>
-    <div class="hamburger-button white w-nav-button">
-      <div class="w-icon-nav-menu"></div>
-    </div>
-  </div>
-  <div class="div-block-2"></div>
-  <div class="div-block">
-    <div class="section-4">
-      <div class="row w-row">
-        <div class="w-col w-col-6"><img src="../isdsi.png" height="80" class="image-4"></div>
-        <div class="column w-clearfix w-col w-col-6"><img src="../spjimr.png" class="image-3"></div>
-      </div>
-    </div>
-    <div class="section-3">
-      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav">
-        <div class="container-3 w-container">
-          <nav role="navigation" class="nav-menu-3 w-nav-menu"><a href="#" class="nav-link-2 w-nav-link">Home</a>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Registration</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Submissions</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">List of Tracks</a><a href="#" class="dropdown-links w-dropdown-link">Track chair</a><a href="#" class="dropdown-links w-dropdown-link">Track Details</a>
-              <a href="#" class="dropdown-links w-dropdown-link">Important Dates</a>
-            <a href="/abstract" class="dropdown-links w-dropdown-link">Abstract Submissions</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Leadership</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Doctoral Colloquium</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Workshops</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Program Schedule</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Accomodations</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>About Us</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a><a href="#" class="dropdown-links w-dropdown-link">Link 1</a></nav>
-            </div><a href="#" class="nav-link-3 w-nav-link">Contact Us</a></nav>
-          <div class="w-nav-button">
-            <div class="w-icon-nav-menu"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+  
+
     <div>
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
@@ -118,33 +18,14 @@
       </div>
       <div class="w-container"></div>
     </div>
-  </div>
-<!--   <div class="hero-section">
-    <div data-ix="fade-in-bottom-page-loads" class="w-container"><img src="images/photo-1441486374104-36abe5ed9b69-bw.jpg" width="84" class="profile-image">
-      <h1 class="hero-heading">Welcome to my portfolio</h1>
-      <div class="hero-subheading">This is some text inside of a div block.</div>
-      <div><a href="http://www.facebook.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-02-white.svg" width="25"></a><a href="http://www.twitter.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-18-white.svg" width="25"></a><a href="http://www.dribble.com" target="_blank" class="social-button w-inline-block"><img src="../social-15-white.svg" width="25"></a><a href="http://www.github.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-05-white.svg" width="25"></a><a href="http://www.instagram.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-07-white.svg" width="25"></a><a href="http://www.pinterest.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-20-white.svg" width="25"></a><a href="http://www.webflow.com/userid" target="_blank" class="social-button w-inline-block"><img src="../social-12-white.svg" width="25"></a><a target="_blank" class="social-button w-inline-block"><img src="../social-06-white.svg" width="25"></a></div>
-    </div>
-  </div> -->
-  <div class="section accent">
-    <div class="w-container">
-      <div class="w-row">
-        <div class="waterfall-image-column w-col w-col-6"><img src="images/photo-1431329842981-433c8635c2b9-bw.jpg" width="291" srcset="images/photo-1431329842981-433c8635c2b9-bw-p-500x331.jpeg 500w, images/photo-1431329842981-433c8635c2b9-bw.jpg 1300w" sizes="(max-width: 479px) 77vw, 291px"></div>
-        <div class="waterfall-content-column w-col w-col-6">
-          <h2 class="section-heading">Section Heading</h2>
-          <div class="section-subheading">Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="footer accent">
-    <div class="w-container">
-     <!--  <div class="float-right"><a href="http://www.facebook.com/userid" class="social-icon-link w-inline-block"><img src="../social-03.svg" width="20"></a><a href="http://www.twitter.com/userid" class="social-icon-link w-inline-block"></a><a href="http://www.linkedin.com/userid" class="social-icon-link w-inline-block"><img src="../social-09.svg" width="20"></a><a class="social-icon-link w-inline-block"></a></div> -->
-      <div class="footer-text">© 2018 by ISDSI.All rights reserved</div>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="../webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-</body>
-</html>
+  
+
+  <p>
+    The 8th PRME Asia Forum on ‘Sustainable Futures: Partnering in Responsible Management Education’ will take place on December 13-14, 2018 at S.P. Jain Institute of Management & Research (SPJIMR) in Mumbai, India. 
+The Forum aims to enable principled leadership, meaningful jobs, and a sustainable, inclusive agenda by bringing together advocates of responsible citizenship, management, and leadership from universities, corporates, civil society and management institutions across the Asia region. 
+The Forum is open to academic and non-academic audiences, and not limited to members of the PRME Chapter in the region or signatories of the UN-supported PRME.
+
+  </p>
+
+
+
