--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,173 @@
 <!DOCTYPE html>
-<html>
+<html data-wf-page="5b80023d8e9ed84b05955839" data-wf-site="5b80023c8e9ed83e51955834">
   <head>
     <title>Spjain</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+      <meta charset="utf-8">
+  
+  <meta content="All Layouts" property="og:title">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  <link href="../normalize.css" rel="stylesheet" type="text/css">
+  <link href="../webflow.css" rel="stylesheet" type="text/css">
+  <link href="../spjain.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,500"]  }});</script>
+  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
   </head>
 
-  <body>
+
+
+
+  <body class="body">
+  	  <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav"><a href="index.html" class="brand-link left-spacing w-nav-brand"></a>
+    <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/users/sign_in" class="navigation-link w-nav-link">Login</a><a href="/users/sign_up" class="navigation-link w-nav-link">Signup</a><img src="../fb-round.png" width="30" height="30" data-w-id="85d85e93-7a46-20c9-6b29-0cc697d97270" class="image-2"><img src="../linkedin-round.png" width="30" height="30" data-w-id="3dedb997-a393-6efe-3ae9-17f3151a35f7" class="image"></nav>
+    <div class="hamburger-button white w-nav-button">
+      <div class="w-icon-nav-menu"></div>
+    </div>
+  </div>
+  <div class="div-block-2"></div>
+
+
+    <div class="div-block">
+    <div class="section-4">
+      <div class="row w-row">
+        <div class="w-col w-col-6"><img src="../isdsi.png" height="80" class="image-4"></div>
+        <div class="column w-clearfix w-col w-col-6"><img src="../spjimr.png" class="image-3"></div>
+      </div>
+    </div>
+<div class="section-3">
+      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav">
+        <div class="container-3 w-container">
+          <nav role="navigation" class="nav-menu-3 w-nav-menu">
+          	
+          	<%= link_to "Home", root_path, :class => "nav-link-2 w-nav-link" %>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Registration</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<%= link_to "Fees", fees_path, :class => "dropdown-links w-dropdown-link" %>
+              	<%= link_to "Dates", dates_path, :class => "dropdown-links w-dropdown-link" %>
+              	<%= link_to "Sign Up", new_user_registration_path, :class => "dropdown-links w-dropdown-link" %>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Submissions</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<%= link_to "List of Tracks", tracks_path, :class => "dropdown-links w-dropdown-link" %>
+              	<a href="#" class="dropdown-links w-dropdown-link">Track Chairs</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Track Details</a>
+              	<%= link_to "Important Dates", dates_path, :class => "dropdown-links w-dropdown-link" %>
+              	<%= link_to "Abstract Submissions", new_abstract_path, :class => "dropdown-links w-dropdown-link" %>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Leadership</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">Speakers</a>
+              	<%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
+              	<a href="#" class="dropdown-links w-dropdown-link">Program Committee</a>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Doctoral Colloquium</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">Colloquium Details</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Applications</a>
+              	<%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Workshops</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">Details</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Chairs</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Important Dates</a>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Program Schedule</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Conference Schedules</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Workshops</a>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Accomodations</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">Campus</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>About Us</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">The UN Global Compact</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">PRME</a>
+              	<a href="#" class="dropdown-links w-dropdown-link">SPJIMR</a>
+              </nav>
+            </div>
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Forum</div>
+              </div>
+              <nav class="w-dropdown-list">
+              	<a href="#" class="dropdown-links w-dropdown-link">About the Forum</a>
+              </nav>
+            </div>
+            <a href="#" class="nav-link-3 w-nav-link">Contact Us</a>
+        </nav>
+          <div class="w-nav-button">
+            <div class="w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <%= yield %>
+</div>
+
+
+      <div class="footer accent">
+    <div class="w-container">
+      <div class="footer-text">© 2018 by ISDSI.All rights reserved</div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../webflow.js" type="text/javascript"></script>
+
   </body>
+
+
 </html>
