--- a/public/spjain.css
+++ b/public/spjain.css
@@ -617,7 +617,10 @@ figcaption {
 .footer.accent {
   display: block;
   height: 40px;
+  margin-top: 50px;
+  margin-bottom: 0px;
   padding-top: 25px;
+  padding-bottom: 50px;
   float: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -632,7 +635,7 @@ figcaption {
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  background-color: #52658f;
+  background-color: #f2f2f2;
 }
 
 .footer.centered-accented {
@@ -656,7 +659,7 @@ figcaption {
   -ms-flex-pack: center;
   justify-content: center;
   font-family: Roboto, sans-serif;
-  color: #fff;
+  color: #000;
   font-size: 14px;
 }
 
@@ -1042,7 +1045,7 @@ figcaption {
 }
 
 .slide-6 {
-  background-image: url('../carousel3.jpg');
+  background-image: url('../images/carousel3.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -1059,7 +1062,7 @@ figcaption {
   background-color: #4d4d4d;
   font-family: Roboto, sans-serif;
   color: #000;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .dropdown-toggle.w--open {
@@ -1108,7 +1111,7 @@ figcaption {
   background-color: #4d4d4d;
   font-family: Roboto, sans-serif;
   color: #fff;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .dropdwon-toggle.w--open {
@@ -1140,7 +1143,7 @@ figcaption {
   background-color: #4d4d4d;
   font-family: Roboto, sans-serif;
   color: #fff;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .nav-link-2:hover {
@@ -1155,7 +1158,7 @@ figcaption {
   background-color: #4d4d4d;
   font-family: Roboto, sans-serif;
   color: #fff;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .nav-link-3:hover {
@@ -1248,6 +1251,207 @@ figcaption {
 
 .container-4 {
   margin-top: 36px;
+}
+
+.heading-5 {
+  color: #535353;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.container-5 {
+  padding-top: 32px;
+}
+
+.column-2 {
+  border-right: 10px solid #000;
+}
+
+.heading-6 {
+  margin-top: 10px;
+  font-family: Roboto, sans-serif;
+  color: #000;
+  font-weight: 200;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
+.heading-7 {
+  margin-top: 10px;
+  color: #000;
+  font-weight: 100;
+  text-align: center;
+}
+
+.column-3 {
+  padding-right: 50px;
+  border-right: 1px none #3a3a3a;
+}
+
+.column-4 {
+  margin-top: 0px;
+  padding-left: 50px;
+  border-right: 2px solid #000;
+  border-bottom: 1px none #000;
+  border-left: 1px none #3a3a3a;
+}
+
+.body-3 {
+  padding-right: 0px;
+  background-color: #f2f2f2;
+}
+
+.div-block-4 {
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.open-tab {
+  padding-top: 7px;
+}
+
+.open-tab.w--current {
+  padding-top: 5px;
+  border-top: 2px solid #00adef;
+  background-color: #fff;
+}
+
+.tabs-menu {
+  text-align: left;
+}
+
+.unordered-list {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.list-item {
+  padding-bottom: 5px;
+}
+
+.list-item-2 {
+  padding-bottom: 5px;
+}
+
+.list-item-3 {
+  padding-bottom: 5px;
+}
+
+.list-item-4 {
+  padding-bottom: 5px;
+}
+
+.list-item-5 {
+  padding-bottom: 5px;
+}
+
+.list-item-6 {
+  padding-bottom: 5px;
+}
+
+.list-item-7 {
+  padding-bottom: 5px;
+}
+
+.list-item-8 {
+  padding-bottom: 5px;
+}
+
+.list-item-9 {
+  padding-bottom: 5px;
+}
+
+.list-item-10 {
+  padding-bottom: 5px;
+}
+
+.list-item-11 {
+  padding-bottom: 5px;
+}
+
+.list-item-12 {
+  padding-bottom: 5px;
+}
+
+.list-item-13 {
+  padding-bottom: 5px;
+}
+
+.list-item-14 {
+  padding-bottom: 5px;
+}
+
+.column-5 {
+  padding-right: 10px;
+  border-radius: 5px;
+}
+
+.column-6 {
+  padding-right: 0px;
+}
+
+.image-5 {
+  padding: 10px;
+}
+
+.div-block-5 {
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.image-6 {
+  margin: 10px;
+  padding: 0px;
+}
+
+.heading-8 {
+  font-weight: 400;
+  text-align: center;
+}
+
+.heading-9 {
+  font-style: italic;
+  font-weight: 400;
+  text-align: center;
+}
+
+.heading-10 {
+  font-weight: 400;
+  text-align: center;
+}
+
+.row-2 {
+  padding-top: 0px;
+  padding-bottom: 20px;
+}
+
+.row-3 {
+  padding-top: 0px;
+  padding-bottom: 20px;
+}
+
+.column-7 {
+  padding-top: 0px;
+}
+
+.row-4 {
+  padding-top: 11px;
+}
+
+.row-5 {
+  padding-top: 11px;
+}
+
+.row-6 {
+  padding-top: 11px;
+}
+
+.row-7 {
+  padding-top: 7px;
+}
+
+.heading-11 {
+  font-weight: 300;
 }
 
 html.w-mod-js *[data-ix="fade-in-bottom-page-loads"] {
