--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-page="5b80023d8e9ed84b05955839" data-wf-site="5b80023c8e9ed83e51955834">
   <head>
-    <title>Spjain</title>
+    <title>The 8th PRME ASIA Forum</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -26,8 +26,22 @@
 
 
   <body class="body">
-  	  <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav"><a href="index.html" class="brand-link left-spacing w-nav-brand"></a>
-    <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/users/sign_in" class="navigation-link w-nav-link">Login</a><a href="/users/sign_up" class="navigation-link w-nav-link">Signup</a><img src="../fb-round.png" width="30" height="30" data-w-id="85d85e93-7a46-20c9-6b29-0cc697d97270" class="image-2"><img src="../linkedin-round.png" width="30" height="30" data-w-id="3dedb997-a393-6efe-3ae9-17f3151a35f7" class="image"></nav>
+  	  <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav">
+        <a href="index.html" class="brand-link left-spacing w-nav-brand"></a>
+    <nav role="navigation" class="navigation-menu w-nav-menu">
+
+      <% if !current_user %>
+
+      <a href="/users/sign_up" class="button-2 w-button">Signup</a>
+      <a href="/users/sign_in" class="button-3 w-button">Login</a>
+      <% elsif %>
+      <%= link_to destroy_user_session_path, :method => :delete, class: 'button-3 w-button', style: 'color:black' do %>
+              <span class="pull-left" style="color: white">Logout</span>
+              <span class="pull-right"><i class="pg-power"></i></span>
+            <% end %>
+      <% end %>
+      
+    </nav>
     <div class="hamburger-button white w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
@@ -56,7 +70,9 @@
               <nav class="w-dropdown-list">
               	<%= link_to "Fees", fees_path, :class => "dropdown-links w-dropdown-link" %>
               	<%= link_to "Dates", dates_path, :class => "dropdown-links w-dropdown-link" %>
+                <% if !current_user%>
               	<%= link_to "Sign Up", new_user_registration_path, :class => "dropdown-links w-dropdown-link" %>
+                <% end %>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -154,14 +170,14 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><%= render 'partials/flash' %>
     <%= yield %>
 </div>
 
 
       <div class="footer accent">
     <div class="w-container">
-      <div class="footer-text">© 2018 by ISDSI.All rights reserved</div>
+      <div class="footer-text">© 2018 by BlockAthena.All rights reserved</div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
