--- a/public/spjain.css
+++ b/public/spjain.css
@@ -128,6 +128,28 @@ figcaption {
   background-color: #2e80b6;
 }
 
+
+.button-2 {
+  overflow: visible;
+  margin-top: 5px;
+  margin-right: 13px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  float: right;
+  background-color: #333a56;
+  font-size: 14px;
+}
+
+.button-3 {
+  margin-top: 5px;
+  margin-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  float: right;
+  background-color: #52658f;
+  font-size: 14px;
+}
+
 .button.white {
   background-color: #fff;
   color: #333;
@@ -1106,7 +1128,7 @@ figcaption {
 
 .dropdwon-toggle {
   margin-top: -15px;
-  padding: 8px 24px 8px 12px;
+  padding: 8px 23px 8px 12px;
   border-right: 1px solid #fff;
   background-color: #4d4d4d;
   font-family: Roboto, sans-serif;
@@ -1178,7 +1200,7 @@ figcaption {
 }
 
 .body {
-  background-color: #f2f2f2;
+  background-color: white;
 }
 
 .div-block-2 {
@@ -1203,10 +1225,12 @@ figcaption {
 }
 
 .heading {
+  margin-top: 10px;
+  padding-bottom: 10px;
   margin-right: 50px;
   margin-left: 50px;
   padding-left: 0px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 2px solid #e1e1e1;
   color: #333;
   font-size: 22px;
   font-weight: 400;
@@ -1303,7 +1327,7 @@ figcaption {
 
 .div-block-4 {
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #f2f2f2;
 }
 
 .open-tab {
