--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -3,24 +3,25 @@
     <h3 class="heading-5">Co chairs</h3>
     <div class="row-3 w-row">
       <div class="column-5 w-col w-col-6">
-        <div class="div-block-5">
+        <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
             <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8">Dr. Sandip Anand</h4>
-              <h5 class="heading-9">Founding Associate Dean</h5>
+              <h4 class="heading-8">Dr. Sandip Anand<br></h4>
+              <h5 class="heading-9">Founding Associate Dean <br><br>
+              </h5>
               <h5 class="heading-10">Xavier University Bhubaneswar</h5>
             </div>
           </div>
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="div-block-5">
+        <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-4 w-row">
             <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6"></div>
             <div class="column-7 w-col w-col-9">
               <h4 class="heading-8">Dr. Sapna Narula</h4>
-              <h5 class="heading-9">Associate Professor and Head in the Department of Business Sustainability</h5>
+              <h5 class="heading-9">Head in the Department of Business Sustainability</h5>
               <h5 class="heading-10">TERI School of Advanced Studies</h5>
             </div>
           </div>
@@ -29,7 +30,7 @@
     </div>
     <div class="w-row">
       <div class="column-5 w-col w-col-6">
-        <div class="div-block-5">
+        <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="w-row">
             <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6"></div>
             <div class="w-col w-col-9">
