--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
           <div class="slide-1 w-slide"></div>
-          <div class="slide-5 w-slide"></div>
-          <div class="slide-6 w-slide"></div>
+          <!-- <div class="slide-5 w-slide"></div> -->
+          <!-- <div class="slide-6 w-slide"></div> -->
         </div>
         <div class="w-slider-arrow-left">
           <div class="w-icon-slider-left"></div>
