--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -18,6 +18,7 @@
             <li class="list-item-12">Business Initiatives for Sustainable Development</li>
             <li class="list-item-13">Inequality - the role for businesses</li>
             <li class="list-item-14">Engaging with Sustainable Development Goals - The local experiences</li>
+            <li class="list-item-14">Extreme events, disasters and building resilience</li>
           </ul>
         </div>
       </div>
