--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,8 +52,9 @@
     <div class="div-block">
     <div class="section-4">
       <div class="row w-row">
-        <div class="w-col w-col-6"><img src="../isdsi.png" height="80" class="image-4"></div>
-        <div class="column w-clearfix w-col w-col-6"><img src="../spjimr.png" class="image-3"></div>
+        <div class="w-col w-col-4"><img src="../UNGC Logo.png" height="80" class="image-4"></div>
+        <div class="w-col w-col-4"><img src="../UNPRME Logo.png" height="80" class="image-4"></div>
+        <div class="column w-clearfix w-col w-col-4"><img src="../spjimr.png" class="image-3"></div>
       </div>
     </div>
 <div class="section-3">
