--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1039,7 +1039,7 @@ figcaption {
 
 .slide-1 {
   background-image: url('../UNPRME.jpg');
-  /*background-position: 50% 50%;*/
+  background-position: 50% 35%;
   background-size: cover;
 }
 
