--- a/app/views/home/dates.html.erb
+++ b/app/views/home/dates.html.erb
@@ -4,40 +4,40 @@
         <div class="div-block-4">
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6">
-                <h5 class="heading-6">Abstract Submissions</h5>
+              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                <h5 class="heading-6" style="color:white">Abstract Submissions</h5>
               </div>
-              <div class="column-3 w-col w-col-6">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                 <h5 class="heading-7">September 30, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6">
-                <h5 class="heading-6">Decision on Abstracts</h5>
+              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white;">
+                <h5 class="heading-6" style="color:white">Decision on Abstracts</h5>
               </div>
-              <div class="column-3 w-col w-col-6">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969">
                 <h5 class="heading-7">October 20, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6">
-                <h5 class="heading-6">Final Paper Submission</h5>
+              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white;">
+                <h5 class="heading-6" style="color:white">Final Paper Submission</h5>
               </div>
-              <div class="column-3 w-col w-col-6">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969">
                 <h5 class="heading-7">November 15, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6">
-                <h5 class="heading-6">Final Registration</h5>
+              <div class="column-4 w-col w-col-6" style="background-color: #696969; border-bottom-left-radius: 10px; padding-bottom: 2px;">
+                <h5 class="heading-6" style="color:white">Final Registration</h5>
               </div>
-              <div class="column-3 w-col w-col-6">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-bottom-right-radius: 10px">
                 <h5 class="heading-7">November 25, 2018</h5>
               </div>
             </div>
