--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -15,50 +15,50 @@
               <div class="div-block-4">
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Industry participant</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Industry participant</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">8000 INR per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Members of UN Global Compact Network</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Members of UN Global Compact Network</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">6000 INR per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Academics</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Academics</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">6000 INR per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Students</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Students</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">2000 INR per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Social Sector</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px; padding-bottom: 2px;">
+                      <h5 class="heading-6" style="color:white">Social Sector</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">500 INR per person</h5>
                     </div>
                   </div>
@@ -69,50 +69,50 @@
               <div class="div-block-4">
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Industry participant</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Industry participant</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">120 USD per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Members of UN Global Compact Network</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Members of UN Global Compact Network</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">90 USD per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Academics</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Academics</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">90 USD per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Students</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+                      <h5 class="heading-6" style="color:white">Students</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">30 USD per person</h5>
                     </div>
                   </div>
                 </div>
                 <div>
                   <div class="w-row">
-                    <div class="column-4 w-col w-col-6">
-                      <h5 class="heading-6">Social Sector</h5>
+                    <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px; padding-bottom: 2px;">
+                      <h5 class="heading-6" style="color:white">Social Sector</h5>
                     </div>
-                    <div class="column-3 w-col w-col-6">
+                    <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
                       <h5 class="heading-7">10 USD per person</h5>
                     </div>
                   </div>
