--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1192,8 +1192,8 @@ figcaption {
 
 .div-block {
   display: block;
-  padding-right: 120px;
-  padding-left: 120px;
+  padding-right: 70px;
+  padding-left: 70px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1329,7 +1329,7 @@ figcaption {
 
 .div-block-4 {
   border-radius: 10px;
-  background-color: #f2f2f2;
+  background-color: #fff;
 }
 
 .open-tab {
