--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,8 +83,8 @@
               </div>
               <nav class="w-dropdown-list">
               	<%= link_to "List of Tracks", tracks_path, :class => "dropdown-links w-dropdown-link" %>
-              	<a href="#" class="dropdown-links w-dropdown-link">Track Chairs</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Track Details</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Track Chairs</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Track Details</a>
               	<%= link_to "Important Dates", dates_path, :class => "dropdown-links w-dropdown-link" %>
               	<%= link_to "Abstract Submissions", new_abstract_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
@@ -95,9 +95,9 @@
                 <div>Leadership</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">Speakers</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Speakers</a>
               	<%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
-              	<a href="#" class="dropdown-links w-dropdown-link">Program Committee</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Program Committee</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -106,8 +106,8 @@
                 <div>Doctoral Colloquium</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">Colloquium Details</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Applications</a>
+              	<a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Applications</a>
               	<%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
             </div>
@@ -117,9 +117,9 @@
                 <div>Workshops</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">Details</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Chairs</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Important Dates</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Details</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Chairs</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Important Dates</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -128,10 +128,10 @@
                 <div>Program Schedule</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Conference Schedules</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Workshops</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Conference Schedules</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Workshops</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -140,8 +140,8 @@
                 <div>Accomodations</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">Campus</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Campus</a>
+              	<a href="/comingup" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -150,9 +150,9 @@
                 <div>About Us</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">The UN Global Compact</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">PRME</a>
-              	<a href="#" class="dropdown-links w-dropdown-link">SPJIMR</a>
+              	<a href="/unglobal" class="dropdown-links w-dropdown-link">The UN Global Compact</a>
+              	<a href="/prme" class="dropdown-links w-dropdown-link">PRME</a>
+              	<a href="/spjimr" class="dropdown-links w-dropdown-link">SPJIMR</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -161,7 +161,7 @@
                 <div>Forum</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="#" class="dropdown-links w-dropdown-link">About the Forum</a>
+              	<a href="/forum" class="dropdown-links w-dropdown-link">About the Forum</a>
               </nav>
             </div>
             <a href="#" class="nav-link-3 w-nav-link">Contact Us</a>
