--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -36,7 +36,7 @@
             <div class="w-col w-col-9">
               <h4 class="heading-8">Dr. Preeti Tiwari</h4>
               <h5 class="heading-9">Assistant Professor (Strategy)</h5>
-              <h5 class="heading-10">T M A PAI Management Institute<br></h5>
+              <h5 class="heading-10">T A PAI Management Institute<br></h5>
             </div>
           </div>
         </div>
