--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -79,5 +79,31 @@
             </div>
           </div>
         </div>
+        <div class="w-row" style="margin-top: 40px;">
+          <div class="column-5 w-col w-col-6">
+            <div class="div-block-5">
+              <div class="w-row">
+                <div class="w-col w-col-3"><img src="../Prof-Carole-Parkes.jpg" width="84" class="image-4"></div>
+                <div class="w-col w-col-9">
+                  <h4 class="heading-8">Prof. Carole Parkes</h4>
+                  <h5 class="heading-9">Professor of Responsible Management</h5>
+                  <h5 class="heading-10"> Winchester University Business School <br></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column-6 w-col w-col-6">
+            <div class="div-block-5">
+              <div class="w-row">
+                <div class="w-col w-col-3"><img src="../Mr-Amit-Jakhar.jpg" class="image-6"></div>
+                <div class="w-col w-col-9">
+                  <h4 class="heading-9">&nbsp;</h4>
+                  <h4 class="heading-8">Mr. Amit Jakhar</h4>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
