--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,11 @@
+<% content_for :styles do %>
+  <style type="text/css">
 
+
+
+</style>
   
+<% end %>
 
     <div>
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
