--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <%= yield :styles %>
   </head>
 
 
@@ -48,7 +49,13 @@
   </div>
   <div class="div-block-2"></div>
 
-
+  <div class="div-block">
+    <div class="ticker-wrap">
+      <div class="ticker">
+        <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE : SEPTEMBER 30</div>
+      </div>
+    </div>
+</div>
     <div class="div-block">
     <div class="section-4">
       <div class="row w-row">
@@ -83,8 +90,8 @@
               </div>
               <nav class="w-dropdown-list">
               	<%= link_to "List of Tracks", tracks_path, :class => "dropdown-links w-dropdown-link" %>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Track Chairs</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Track Details</a>
+              	<a href="/trackchairs" class="dropdown-links w-dropdown-link">Track Chairs</a>
+              	<a href="/trackdetails" class="dropdown-links w-dropdown-link">Track Details</a>
               	<%= link_to "Important Dates", dates_path, :class => "dropdown-links w-dropdown-link" %>
               	<%= link_to "Abstract Submissions", new_abstract_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
@@ -97,7 +104,7 @@
               <nav class="w-dropdown-list">
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Speakers</a>
               	<%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Program Committee</a>
+              	<a href="/organizingcomittee" class="dropdown-links w-dropdown-link">Organizing Committee</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -107,7 +114,7 @@
               </div>
               <nav class="w-dropdown-list">
               	<a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Applications</a>
+              	<a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
               	<%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
             </div>
@@ -117,7 +124,7 @@
                 <div>Workshops</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Details</a>
+              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Details</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Chairs</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Important Dates</a>
               </nav>
@@ -164,7 +171,7 @@
               	<a href="/forum" class="dropdown-links w-dropdown-link">About the Forum</a>
               </nav>
             </div>
-            <a href="#" class="nav-link-3 w-nav-link">Contact Us</a>
+            <a href="/contactus" class="nav-link-3 w-nav-link">Contact Us</a>
         </nav>
           <div class="w-nav-button">
             <div class="w-icon-nav-menu"></div>
