--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1038,13 +1038,13 @@ figcaption {
 }
 
 .slide-1 {
-  background-image: url('../UNPRME.jpg');
+  background-image: url('../003_PRMEMICROSITEBanner_001_F.jpg');
   background-position: 50% 35%;
   background-size: cover;
 }
 
 .slide-2 {
-  background-image: url('../carousel2.jpg');
+  background-image: url('../003_PRMEMICROSITEBanner_001_F2.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: repeat;
@@ -1063,7 +1063,7 @@ figcaption {
 }
 
 .slide-5 {
-  background-image: url('../carousel2.jpg');
+  background-image: url('../003_PRMEMICROSITEBanner_001_F2.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
