--- a/public/webflow.css
+++ b/public/webflow.css
@@ -1012,7 +1012,7 @@ textarea.w-select {
   margin: auto;
   cursor: pointer;
   overflow: hidden;
-  color: white;
+  color: black;
   font-size: 40px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   tap-highlight-color: rgba(0, 0, 0, 0);
